SiteAssets/pages/2.0/scripts/user.dashboard.layout.1.css
/* ... */
.mini-risk-tbl {
    width: 100%;
}

.rs {
    width: 50px;
    height: 30px;
    font-size: 0.9em;
    /* border:1px dotted rgb(255, 255, 255); */
}

.rsc {
    font-size: 1.8em;
}

.clr_1 {
    background-color: rgba(55, 229, 0, 0.1);
    border: 1px dotted rgb(55, 229, 0);
    color: rgb(160, 160, 160);
}

.clr_2 {
    background-color: rgba(160, 171, 4, 0.1);
    border: 1px dotted rgb(160, 171, 4);
    color: rgb(160, 160, 160);
}

.clr_3 {
    background-color: rgba(242, 215, 9, 0.1);
    border: 1px dotted rgb(242, 215, 9);
    color: rgb(160, 160, 160);
}

.clr_4 {
    background-color: rgba(248, 119, 14, 0.1);
    border: 1px dotted rgb(248, 119, 14);
    color: rgb(160, 160, 160);
}

.clr_5 {
    background-color: rgba(255, 23, 20, 0.1);
    border: 1px dotted rgb(255, 23, 20);
    color: rgb(160, 160, 160);
}

.clr_1:hover {
    background-color: rgba(55, 229, 0, 0.5);
    border: 1px solid rgb(55, 229, 0);
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.clr_2:hover {
    background-color: rgba(160, 171, 4, 0.5);
    border: 1px solid rgb(160, 171, 4);
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.clr_3:hover {
    background-color: rgba(242, 215, 9, 0.5);
    border: 1px solid rgb(242, 215, 9);
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.clr_4:hover {
    background-color: rgba(248, 119, 14, 0.5);
    border: 1px solid rgb(248, 119, 14);
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.clr_5:hover {
    background-color: rgba(255, 23, 20, 0.5);
    border: 1px solid rgb(255, 23, 20);
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.clr_1_active {
    background-color: rgba(55, 229, 0, 0.5);
    border: 1px solid rgb(55, 229, 0);
    color: rgb(255, 255, 255);
}

.clr_2_active {
    background-color: rgba(160, 171, 4, 0.5);
    border: 1px solid rgb(160, 171, 4);
    color: rgb(255, 255, 255);
}

.clr_3_active {
    background-color: rgba(242, 215, 9, 0.5);
    border: 1px solid rgb(242, 215, 9);
    color: rgb(255, 255, 255);
}

.clr_4_active {
    background-color: rgba(248, 119, 14, 0.5);
    border: 1px solid rgb(248, 119, 14);
    color: rgb(255, 255, 255);
}

.clr_5_active {
    background-color: rgba(255, 23, 20, 0.5);
    border: 1px solid rgb(255, 23, 20);
    color: rgb(255, 255, 255);
}

.sevs,
.liks {
    font-size: 1em;
}

.hidden-cell {
    display: none;
}

#DeltaTopNavigation {
    width: 100%;
    float: left;
}


/* h1, h2, h3, h4, h5, h6, .ms-h1, .ms-h2, .ms-h3, .ms-h4, .ms-h5, .ms-h6 {
    font-weight: normal;
    margin:0 !important;
} */

.tgn-btn {
    display: block;
    cursor: pointer;
    margin: 0 16px 0 0;
    float: left;
    width: 150px;
    text-align: center;
}

.tgn-btn:hover {
    background-color: #21E500;
    color: #000000;
}

.tgn-btn-xtra {
    display: block;
    cursor: pointer;
    margin: 0 16px 0 0;
    float: left;
    width: 150px;
    text-align: center;
}

.tgn-btn-xtra:hover {
    background-color: #21E500;
    color: #000000;
}

.tpos-svbtn {
    display: block;
    padding: 5px;
    background-color: rgb(0, 0, 0);
    text-align: center;
    color: rgb(255 255 255);
    box-shadow: 1px 1px 1px rgb(255 255 255);
    background: #7939f7;
    -webkit-box-shadow: 4px 5px 0 0 #fff;
    -moz-box-shadow: 4px 5px 0 0 #fff;
    box-shadow: 4px 5px 0 0 #fff;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    border: solid 1.5px #fff;
    width: 65px;
    float: right;
    position:  absolute;
    right: 2%;
    bottom: 20px;
}

.tpos-svbtn:hover {
    -webkit-box-shadow: 6px 7px 0 0 #fff;
    -moz-box-shadow: 6px 7px 0 0 #fff;
    box-shadow: 6px 7px 0 0 #fff;
    color: rgb(255 255 255);
    cursor: pointer;
}

.width-a {
    width: auto;
    min-width: 80px;
}

.tpos-svcbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    width: 85px;
    float: left;
    cursor: pointer;
}

.tpos-svcbtn:hover {
    background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.72) 63%, rgba(255, 255, 255, 0) 100%);
    /* FF3.6-15 */
    background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.72) 63%, rgba(255, 255, 255, 0) 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.72) 63%, rgba(255, 255, 255, 0) 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    color: rgb(0, 0, 0);
}

.coordinatesTBL {
    border-collapse: collapse;
}

.ctagd:hover {
    background-color: #FF1F19;
    color: #fff;
}

.tpos-delbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(255, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    width: 35px;
    float: left;
    cursor: pointer;
}

.tpos-addbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 255, 0);
    color: rgb(0, 0, 0);
    text-align: center;
    border: 1px solid #21E500;
    width: 35px;
    float: left;
    cursor: pointer;
}

.tpos-rvbtn {
    display: block;
    padding: 5px;
    border-radius: 3px;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid #21E500;
    /* width:85px; */
    float: left;
    cursor: pointer;
}
/* ... */

